default/objects/IBAN_BIC__c/IBAN_BIC__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>IBAN-BIC</label>
</CustomObject>