default/objects/IBAN_BIC__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>40</length>
    <type>Text</type>
</CustomField>